fix missing pyd files!

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,43 @@
-**
-!apps/python/CamTool_2/
+content/
+!apps/python/CamTool_2/**
 apps/python/CamTool_2/data/
 !content/gui/icons/**
+apps/lua/
+cfg/
+system/
+server/
+sdk/
+launcher/
+extension/
+cache/
+apps/python/Chat/Chat.py
+apps/python/gMeter/gMeter.py
+apps/python/gMeter/gmeterBackground.png
+plugins/plugins.ini
+acs.exe
+acs.pdb
+acs_x86.exe
+acs_x86.pdb
+acShowroom.exe
+acShowroom.pdb
+acVideoModes.dll
+AssettoCorsa.exe
+AssettoCorsa.exe.config
+changelog.txt
+dwrite.dll
+fmod.dll
+fmod64.dll
+fmodstudio.dll
+fmodstudio64.dll
+msvcp100.dll
+msvcp110.dll
+msvcp120.dll
+msvcr100.dll
+msvcr110.dll
+msvcr120.dll
+python33.zip
+steam_api.dll
+steam_api64.dll
+steam_appid.txt
+SteamStatisticsReader.exe
+SteamStatisticsReader.pdb
